# sacappus

./: README.md
assets/container/: compose.yml  project-compose.yml
etc/: compiler
s1-app2/: .gitignore  compose.yml
s1-app2/rapport/: 00-rapport.tex
s1-app2/src/: cosine.c  findChar.c  matAdd.c  matMult.c  palindrome.c  sine.c
s1-app3/: compose.yml  pyproject.toml
s1-app3/rapport/: 00-rapport.tex
s1-app3/src/: quickmath.py
s1-app4/: compose.yml
s1-app4/rapport/: 00-rapport.tex
s1-app4/src/: bibliotheque_images.c  bibliotheque_images.h  gestion_images.c  readme_autovalidation.txt
s1-app6/: .gitignore  compose.yml
s1-app6/appendix/: 00-rapport.tex
s2-app1/: compose.yml
s2-app2/: LICENSE  README.md  compose.yml  pyproject.toml
s2-app6/: compose.yml  pyproject.toml
s2-app6/altium/: Circuit_version 4.SchDoc  S2_APP6_ETUDIANT_version 4.PrjPcbStructure  S2_APP6_version 4.PrjPcb  S2_APP6_version 4.PrjPcbStructure
s2-app6/presentation/: 00-presentation.rnw
s2-app6/presentation/lib/: helpers.py  isolate.py
s3-app1/: .gitignore  compose.yml
s3-app3/: compose.yml
s4-app1/: compose.yml
s4-app2/: compose.yml  pyproject.toml
s4-app3/: compose.yml
s4-app4/: .gitignore  compose.yml
s4-app5/: compose.yml  pyproject.toml
s4-gen490/: compose.yml
s5-app1/: compose.yml
s5-app2/: compose.yml
s5-app3/: pyproject.toml
s5-app4/: compose.yml  pyproject.toml
s5-app4/src/: img.py  (+8 more)
s5-app5/: .gitignore  pyproject.toml
s5-app5/notebooks/: example.py  intro.py  mandat-01.py  mandat-02.py  mandat-03.py
s6-app1/: compose.yml  pyproject.toml
(+366 files in other folders)
