[project]
name = "s2-app6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.23.8",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "ty>=0.0.43",
]
