[project]
name = "code"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.22.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "np>=1.0.2",
    "playwright>=1.58.0",
    "polars>=1.39.3",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "marimo>=0.21.1",
    "mcp>=1",
    "nbformat>=5.10.4",
    "pydantic>=2",
    "pytest>=9.0.2",
    "python-lsp-server>=1.14.0",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
